@@ -1,0 +1,10 @@
+Any link can be exported as a xml file from the link info view.
+Login is required to trigger this function.
+The result can be used to import it again at the stats view.
+
+It exports all the link information, image and its tags and categories.
+
+The import can overwrite existing links and import non existing ones.
+
+A import xml file can contain multiple exports. Make sure the root is
+still there.
